@@ -31,7 +31,7 @@
 	<input type="hidden" name="action" value="<@v.skel_dir>blog_rebuild">
 	<input type="hidden" name="csrf_check_key" value="<@CSRF_check_key>">
 	
-	<p><input type="checkbox" name="only_blog_info" value="1"><label>付加情報（タグ一覧等）やRSSのみを再生成する</label></p>
+	<p><input type="checkbox" name="only_blog_info" value="1"><label>付加情報（タグ一覧等）やRSSのみ再生成する</label></p>
 	
 	<input type=submit name="submit" value="ブログを再構築する"><br>
 
