@@ -34,6 +34,7 @@
 -【design】ヘッダ用の「ブログの説明」プラグインを追加。
 -【design】ブログ情報で参照するRSSアイコンを作り直しました。またRSSにリンクするよう変更しました。
 -【記法】HTML5準拠のためtable記法のsummary指定を無効にしました。
+-【fix】デフォルトブログ設定時のサイドバーなどURLが正しく書き換わってなかった。（[http://adiary.blog.abk.nu/0359#com::Thanks to 手石]
 -【fix】ヘッダ部のmargin/padding設定が有効ではなかった。
 -【fix】ヘッダのタイトル文字位置がブログ表示時とデザイン編集時で異なる。
 -【fix】コンテンツリスト（ドロップダウンメニュー）で1段目の項目が1つしかない時、メニューを左に開いてしまう不具合を修正。
